--- a/css/main.css
+++ b/css/main.css
@@ -155,6 +155,7 @@ section {
 	-moz-transition: opacity 300ms ease-out;
 	transition: opacity 300ms ease-out;
 }
+
 main {
 	overflow-x: hidden;
 }
@@ -240,7 +241,7 @@ main {
 }
 
 
-/* Slide 3 */
+/* arch */
 #arch .bcg {background-image:url('../img/archeader.jpg')}
 #arch .hsContent {
 margin-left: -450px;
@@ -251,7 +252,6 @@ margin-left: -450px;
         padding-right: 0;
 	}
 
-/* arch */
 
 #archcontent .hsContent {
 
@@ -263,7 +263,7 @@ margin-left: -450px;
 
 }
 
-/* Slide 4 */
+/* design */
 #design .bcg {background-image:url('../img/designheader.jpg')}
 #design .hsContent {
 	margin-left: -450px;
@@ -273,6 +273,16 @@ margin-left: -450px;
 		padding-left: 0;
 		padding-right: 0;
 	}
+
+
+#designcontent .hsContent {
+    position: absolute;
+    width: 400px;
+    height: 200px;
+    margin-left: -200px;
+    top: 150px;
+
+}
 
 /* art */
 
